--- a/app/src/main/res/layout/activity_create_deck.xml
+++ b/app/src/main/res/layout/activity_create_deck.xml
@@ -13,8 +13,9 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="90dp"
         android:ems="10"
+        android:hint="@string/front_text_enter"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,8 +26,8 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="90dp"
         android:ems="10"
+        android:hint="@string/back_text_enter"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
