--- a/app/src/main/res/layout/activity_create_deck.xml
+++ b/app/src/main/res/layout/activity_create_deck.xml
@@ -75,7 +75,8 @@
         android:id="@+id/imageButton4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="?attr/homeAsUpIndicator"
-        tools:layout_editor_absoluteX="329dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_marginEnd="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/homeAsUpIndicator" />
 </android.support.constraint.ConstraintLayout>
