--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_height="55dp"
         android:layout_marginEnd="16dp"
         android:background="@android:drawable/ic_menu_add"
+        android:onClick="addClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
