--- a/app/src/main/res/layout/activity_view_deck.xml
+++ b/app/src/main/res/layout/activity_view_deck.xml
@@ -10,9 +10,10 @@
         android:id="@+id/homeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="?attr/homeAsUpIndicator"
-        tools:layout_editor_absoluteX="329dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_marginEnd="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/homeAsUpIndicator" />
 
     <ImageButton
         android:id="@+id/rightButton"
