--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -6,27 +6,28 @@
 
     <EditText
         android:id="@+id/Enter"
-        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
+        style="@style/Widget.AppCompat.EditText"
         android:layout_width="370dp"
         android:layout_height="95dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="16dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="@string/enter_text" />
+        android:hint="@string/enter_text"
+        android:inputType="text" />
 
     <Button
         android:id="@+id/save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="addClick2"
+        android:onClick="onSave"
         android:text="@string/save_button" />
 
     <Button
         android:id="@+id/cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="addClick3"
+        android:onClick="onCancel"
         android:text="@string/cancel_button" />
 
 </LinearLayout>
