--- a/app/src/main/res/layout/activity_create_deck.xml
+++ b/app/src/main/res/layout/activity_create_deck.xml
@@ -7,29 +7,21 @@
     tools:context=".CreateDeckActivity">
 
     <EditText
-        android:id="@+id/frontEdit"
+        android:id="@+id/changeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="90dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
-        android:hint="@string/front_text_enter"
+        android:hint="@string/change_text"
         android:inputType="text"
         android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/backEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="90dp"
-        android:ems="10"
-        android:hint="@string/back_text_enter"
-        android:inputType="text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frontEdit" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="" />
 
     <ImageButton
         android:id="@+id/backButton"
@@ -58,17 +50,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginBottom="10dp"
         android:text="@string/front_deck"
-        app:layout_constraintBottom_toTopOf="@+id/frontEdit"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/back_Deck"
-        app:layout_constraintBottom_toTopOf="@+id/backEdit"
+        app:layout_constraintBottom_toTopOf="@+id/changeText"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
