--- a/app/src/main/res/layout/activity_view_deck.xml
+++ b/app/src/main/res/layout/activity_view_deck.xml
@@ -8,27 +8,29 @@
 
     <ImageButton
         android:id="@+id/rightButton"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="98dp"
+        android:layout_height="99dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/arrow_right"
         android:onClick="onRightButtonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/arrow_down_float"
-        android:layout_marginRight="16dp" />
+        app:srcCompat="@drawable/arrow_right" />
 
     <ImageButton
         android:id="@+id/leftButton"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="98dp"
+        android:layout_height="98dp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/arrow_left"
         android:onClick="onLeftButtonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/arrow_down_float"
-        android:layout_marginLeft="16dp" />
+        app:srcCompat="@drawable/arrow_left" />
 
     <TextView
         android:id="@+id/cardText"
