--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#595959</color>
-    <color name="colorPrimaryDark">black</color>
+    <color name="colorPrimaryDark">#404040</color>
     <color name="colorAccent">#595959</color>
 </resources>
